--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -69,3 +69,10 @@
 #loading-text {
     font-size: 2rem;
 }
+
+.bg-cover {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover !important;
+}
