started on dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
     --bg-form-color: rgb(243, 244, 250);
     --logo-color: #13405e;
     --form-text-color: #121120;
+    --dash-color: rgb(26, 26, 26);
     font-size: 10px;
    
 }
@@ -33,6 +34,10 @@ body {
     top: 50%;
     background: var(--bg-color);
     padding: 1.5rem;
+    color: var(--logo-color);
+}
+
+.brand-logo-dash {
     color: var(--logo-color);
 }
 
