--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -70,6 +70,15 @@
   min-height: 100vh;
 }
 
+.layout-3 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 #loading-text {
     font-size: 2rem;
 }
