--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -78,3 +78,175 @@
     border: 0;
     background: rgb(226, 226, 255);
 }
+
+
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+  }
+
+
+.end {
+    margin-top: auto;
+    margin-bottom: 10rem;
+}
+
+
+
+.active-name {
+    font-size: 4rem;
+    margin-bottom: 3rem;
+}
+
+.workspaces-container {
+    height: 100vh;
+    overflow-y: auto;
+    padding: 3rem;
+}
+
+.workspace-block {
+    height: 27rem;
+    margin: 20px;
+    background: var(--bg-color);
+    border-radius: 2rem;
+    position: relative;
+}
+
+
+.image-wrap {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    border-radius: 2rem;
+    opacity: 0.07;
+
+}
+.workspace-name {
+    font-size: 2rem;
+    color: rgb(250, 244, 244);
+}
+
+.name-wrap {
+    border-radius: 2rem;
+    padding: 0.8rem;
+}
+
+.Protected {
+    background: rgb(248, 185, 183);
+}
+
+
+
+.Free {
+    background: green;
+}
+
+.Free .name-wrap {
+    background: darkgreen;
+}
+
+.User {
+    background: rgb(167, 199, 230);
+}
+
+.User .name-wrap {
+    background: rgb(86, 112, 138);
+}
+.Owner .name-wrap {
+    background: rgb(86, 112, 138);
+}
+
+
+.Owner {
+    background: rgb(167, 199, 230);
+}
+
+.Protected .name-wrap {
+    background: rgb(136, 77, 77);
+}
+
+.Protected .workspace-icon {
+    color: rgb(107, 29, 29);
+}
+
+.Owner .workspace-icon {
+    color: rgb(238, 216, 89);
+}
+
+.end-left {
+    font-size: 3rem;
+    position: absolute;
+    bottom: 2rem;
+    right: 2rem;
+}
+
+.form-protected {
+    
+}
+
+.form-protected input[type=password] {
+
+    border: 1px solid rgb(207, 10, 10);
+    background: rgb(136, 77, 77);
+    color: #ffffff;
+    border: 0;
+    font-size: 1.8rem;
+    outline: none;
+   
+    padding: 0.8rem;
+
+
+}
+
+
+.form-protected input[type=password]::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #ffffff;
+    opacity: 1; /* Firefox */
+  }
+  
+  .form-protected input[type=password]:-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: #ffffff;
+  }
+  
+  .form-protected input[type=password]::-ms-input-placeholder { /* Microsoft Edge */
+      color: #ffffff;
+  }
+
+.form-space {
+    margin-top: 3rem;
+}
+
+.form-protected  input {
+    display: block;
+    margin: 3rem auto;
+}
+
+.form-protected input[type="submit"] {
+    border: 0;
+    padding: 0.8rem;
+    width: 75%;
+    font-size: 2rem;
+    background: rgb(230, 84, 84);
+    color: #ffffff;
+    border-radius: 3rem;
+}
+
+
+.form-owner input {
+    display: block;
+    margin: 6rem auto;
+}
+
+.form-owner input[type="submit"] {
+    border: 0;
+    padding: 0.8rem;
+    width: 75%;
+    font-size: 2rem;
+    background: rgb(86, 112, 138);
+    color: #ffffff;
+    border-radius: 3rem;
+}
