--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -111,7 +111,6 @@
     height: 27rem;
     margin: 20px;
     background: var(--bg-color);
-    border-radius: 2rem;
     position: relative;
 }
 
@@ -126,12 +125,14 @@
 
 }
 .workspace-name {
-    font-size: 2rem;
-    color: rgb(250, 244, 244);
+    font-size: 1.6rem;
+    color: rgb(34, 33, 33);
+    margin: unset;
+    text-align: center;
 }
 
 .name-wrap {
-    border-radius: 2rem;
+  
     padding: 0.8rem;
 }
 
@@ -146,7 +147,7 @@
 }
 
 .Free .name-wrap {
-    background: darkgreen;
+    /* background: darkgreen; */
 }
 
 .User {
@@ -154,15 +155,15 @@
 }
 
 .User .name-wrap {
-    background: rgb(86, 112, 138);
+    /* background: rgb(86, 112, 138); */
 }
 .Owner .name-wrap {
-    background: rgb(86, 112, 138);
+    /* background: rgb(86, 112, 138); */
 }
 
 
 .Owner {
-    background: rgb(167, 199, 230);
+    background: rgb(245, 250, 255);
 }
 
 .Protected .name-wrap {
@@ -177,8 +178,12 @@
     color: rgb(238, 216, 89);
 }
 
+.User .workspace-icon {
+    color: rgb(238, 216, 89);
+}
+
 .end-left {
-    font-size: 3rem;
+    font-size: 2rem;
     position: absolute;
     bottom: 2rem;
     right: 2rem;
@@ -194,7 +199,7 @@
     background: rgb(136, 77, 77);
     color: #ffffff;
     border: 0;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     outline: none;
    
     padding: 0.8rem;
@@ -229,7 +234,7 @@
     border: 0;
     padding: 0.8rem;
     width: 75%;
-    font-size: 2rem;
+    font-size: 1.6rem;
     background: rgb(230, 84, 84);
     color: #ffffff;
     border-radius: 3rem;
@@ -245,8 +250,18 @@
     border: 0;
     padding: 0.8rem;
     width: 75%;
-    font-size: 2rem;
+    font-size: 1.6rem;
     background: rgb(86, 112, 138);
     color: #ffffff;
     border-radius: 3rem;
+}
+
+.message-user {
+    font-size: 1.7rem;
+    font-weight: bold;
+}
+
+.message-time {
+    font-size: 1.2rem;
+    color: rgb(104, 102, 102);
 }
