--- a/src/components/Workspace.css
+++ b/src/components/Workspace.css
@@ -8,12 +8,23 @@
     left: 0;
 }
 
+.v-center {
+    align-items: center;
+    height: 100vh;
+}
+
 .work-view {
     height: 100vh;
 }
 
+.workspace-title {
+    font-size: 2.7rem;
+    font-weight: bold;
+}
+
 .channel-text {
-    font-size: 24px;   
+    font-size: 2.4rem;  
+    font-weight: 700;
 }
 
 .channel-bar {
@@ -29,36 +40,56 @@
 }
 
 .messages-box {
+ 
+    border-left: 1px solid rgb(218, 217, 217);
     height: 80%;
+    overflow-y: auto;
 }
 
 .chat-box {
     height: 20%;
     padding: 1rem;
-    background: rgb(224, 240, 230);
+    background: rgb(250, 253, 255);
     display: flex;
     align-items: center;
-    border-top: 1px solid rgb(180, 180, 180);
+    border-top: 1px solid rgb(218, 217, 217);
+    border-left: 1px solid rgb(218, 217, 217);
 }
 
 .chat-form {
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    width: 80%;
 }
 
 .chat-box input[type=text] {
-    border: 1px solid var(--bg-form-color);
+    border: 1px solid rgb(218, 217, 217);
     height: 5rem;
-    font-size: 2rem;
+    font-size: 1.6rem;
     padding: 1rem;
     outline: none;
+    border-radius: 1.2rem;
 }
 
-.chat-box input[type=submit] {
-    font-size: 2rem;
+.chat-box button[type=submit] {
+    font-size: 1.6rem;
     border: 0;
-    background: var(--bg-form-btn-color);
-    border: 1px solid var(--bg-form-color);
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(218, 217, 217);
+    width: 10rem;
+    border-radius: 1.2rem;
 }
 
+.messages-box {
+    font-size: 1.6rem;
+}
+
+.work-bar-color {
+    background: rgb(231, 249, 255);
+}
+
+.message-view {
+    min-height: 10rem;
+    border-top: 1px solid rgb(218, 217, 217);
+    padding: 4rem;
+}
