--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -83,7 +83,7 @@
 
 .line-clamp {
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;  
     overflow: hidden;
   }
@@ -103,7 +103,7 @@
 
 
 .active-name {
-    font-size: 3.8rem;
+    font-size: 3.2rem;
     margin-bottom: 3rem;
     font-weight: 900;
 }
@@ -111,18 +111,22 @@
 .workspaces-container {
     height: 100vh;
     overflow-y: auto;
-    padding: 3rem;
+    padding: 4rem;
 }
 
 .workspace-block {
-    height: 100%;
-    padding-bottom: 3rem;
+ 
+    padding-bottom: 4rem;
     background: var(--bg-color);
     position: relative;
+    width: 100%;
+    height: 100%;
+
+
 }
 
 .w-block {
-    padding: 3rem;
+    padding: 6rem 3rem;
 }
 
 .image-wrap {
@@ -176,10 +180,14 @@
 
 .Protected .workspace-icon {
     background: rgb(245, 250, 255);
+    color: rgb(219, 115, 115);
 }
 
 .Owner .workspace-icon {
     color: rgb(218, 215, 54);
+}
+.Free .workspace-icon {
+    color: rgb(120, 204, 120);
 }
 
 .User .workspace-icon {
@@ -203,10 +211,10 @@
     background: rgb(245, 250, 255);
     
   
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     outline: none;
    
-    padding: 0.8rem;
+    padding: 0.4rem;
 
 
 }
@@ -215,22 +223,22 @@
 
 
 .form-space {
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 .form-protected  input {
     display: block;
-    margin: 3rem auto;
+    margin: 1.5rem auto;
     width: 80%;
 }
 
 
 .workspace-block input[type="submit"] {
     border: 0;
-    padding: 0.8rem 3rem;
+    padding: 0.4rem 4rem;
 
 
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     background: rgb(223, 237, 252);
     border: 1px solid rgb(146, 145, 145);
 }
@@ -239,7 +247,7 @@
 
 .form-owner input {
     display: block;
-    margin: 6rem auto;
+    margin: 2.5rem auto;
 }
 
 
@@ -271,6 +279,9 @@
     display: flex;
 }
 
+
+
+
 .p-abs {
     position: absolute;
 
@@ -287,7 +298,7 @@
 }
 
 .image-enlarge {
-   height: 100%;
+   height: 44rem;
    width: 100%;
    object-fit: cover;
 }
@@ -337,7 +348,11 @@
 }
 
 .image-results {
-    height: 550px;
+    height: 490px;
+}
+
+.fix-h {
+    height: 35px;
 }
 
 .button-wrap-btn {
@@ -394,4 +409,9 @@
 .user-name-chat {
     max-width:  230px;
     margin-bottom: 3rem;
+}
+
+.image-search-title {
+    font-size: 2rem;
+    font-weight: 800;
 }
