--- a/src/components/Workspace.css
+++ b/src/components/Workspace.css
@@ -15,6 +15,7 @@
 
 .work-view {
     height: 100vh;
+    position: relative;
 }
 
 .workspace-title {
@@ -49,11 +50,15 @@
 .chat-box {
     height: 20%;
     padding: 1rem;
-    background: rgb(250, 253, 255);
+
     display: flex;
     align-items: center;
     border-top: 1px solid rgb(218, 217, 217);
     border-left: 1px solid rgb(218, 217, 217);
+}
+
+.chat-bot-color {
+    background: rgb(250, 253, 255);
 }
 
 .chat-form {
@@ -82,10 +87,11 @@
 
 .messages-box {
     font-size: 1.6rem;
+ 
 }
 
 .work-bar-color {
-    background: rgb(231, 249, 255);
+    /* background: rgb(231, 249, 255); */
 }
 
 .message-view {
@@ -100,3 +106,56 @@
 .alert-circle {
     color: rgba(77, 140, 199, 0.966);
 }
+
+.w-space-image {
+    z-index: -1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    opacity: 1;
+}
+
+.image-state {
+  
+}
+
+.image-state .user-name-chat {
+    background: #ffffff;
+    padding: 0.5rem;
+    border-radius: 2rem;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.116);
+    align-items: center;
+}
+
+
+.image-state .user-name-chat h3{
+    margin: unset !important;
+}
+
+.image-state .message-view {
+    min-height: unset;
+    border-top: unset;
+}
+
+.image-state .message-view p {
+    background: #ffffff;
+    padding: 3rem;
+    border-radius: 2rem;
+    width: 70%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.116);
+    
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.msg-box-state .hold {
+   color: rgba(0, 0, 0, 0.596);
+   background: #ffffff;
+   padding: 2.4rem;
+   border-radius: 2rem;
+   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.116);
+}
+
